validity is working and changing html based on local storage

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</script>
 	<meta name="description" content="RV Park">
 	<meta name="author" content="Jason Sinn">
-	<link rel="shortcut icon" href="./css/images/favicon.ico">
+	<!--<link rel="shortcut icon" href="./css/images/favicon.ico">-->
   	<title>Calhoun's RV Retreat</title> 
   	
 </head>
