added basics for deploy

--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
 	<header>
 		
 	</header>
- 
-    	<a href="/river.html"> River Page </a>
+ 		<h4> Calhoun's Riverside RV Retreat </h4>
+ 		<h2> We are currently updating out website </h2>
+ 		<h2> Phone Number 361 550 7536 </h2>
+ 		<h2> Email calhoun@calhounsrvretreats.com </h2>
+ 		<h2> Address 125 Haeber Ln, Tivoli, TX 77990 </h2>
+    	<a href="/river.html"> Rivern Level Info </a>
     	<br/>
-    	<a href="/reservations.html"> Reservations Page </a>
+    	<!--<a href="/reservations.html"> Reservations Page </a>-->
 		
 	<footer>
 		
