added nav bar and contact and rates

--- a/index.html
+++ b/index.html
@@ -52,10 +52,48 @@
 	<meta name="author" content="Jason Sinn">
 	<!--<link rel="shortcut icon" href="./css/images/favicon.ico">-->
   	<title>Calhoun's RV Retreat</title> 
+  	<style type="text/css">
+  		ul {
+		  list-style-type: none;
+		  margin: 0;
+		  padding: 0;
+		  overflow: hidden;
+		  background-color: #333;
+		}
+
+		li:first-child{
+			float: left;
+		}
+
+		li {
+		  float: right;
+		}
+
+		li a {
+		  display: block;
+		  color: white;
+		  text-align: center;
+		  padding: 14px 16px;
+		  text-decoration: none;
+		}
+
+		/* Change the link color to #111 (black) on hover */
+		li a:hover {
+		  background-color: #111;
+		}
+  	</style>
   	
 </head>
 <body>
 	<header>
+		<nav>
+			<ul>
+				<li><a href="/index.html"> Home</a></li>
+				<li><a href="/river.html"> River Level</a></li>
+				<li><a href="/rates.html"> Rates</a></li>
+				<li><a href="/contact.html"> Contact</a><li>
+			</ul>
+		</nav>
 		
 	</header>
  		<h1> Calhoun's Riverside RV Retreat </h1>
@@ -63,7 +101,6 @@
  		<h2> Phone Number 361 550 7536 </h2>
  		<h2> Email calhoun@calhounsrvretreats.com </h2>
  		<h2> Address 125 Haeber Ln, Tivoli, TX 77990 </h2>
-    	<a href="/river.html"> Rivern Level Info </a>
     	<br/>
     	<!--<a href="/reservations.html"> Reservations Page </a>-->
 		
